infrastructure/ibmcloud-galasadev-cluster/galasa-development/gradle/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gradle
  name: gradle
  namespace: galasa-development
spec:
  ports:
    - port: 443
  selector:
    app: gradle
